Skip to content

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
    • Help
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
nautilus
nautilus
  • Project
    • Project
    • Details
    • Activity
    • Releases
    • Cycle Analytics
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
    • Charts
  • Issues 265
    • Issues 265
    • List
    • Board
    • Labels
    • Milestones
  • Merge Requests 12
    • Merge Requests 12
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
    • Charts
  • Wiki
    • Wiki
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Charts
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • nautilusnautilus
  • Issues
  • #162

Closed
Open
Opened Dec 14, 2017 by António Fernandes@antoniof🐚
  • Report abuse
  • New issue
Report abuse New issue

Moving Starred file leaves "ghost" file in favorites:///

Steps to reproduce
  1. Star a file.
  2. Move the starred file (to Trash or some other location, indexed or not)
  3. Switch to favorites:///
Expected result

Moved file is is properly listed in favorites:///, unless it was moved to Trash.

Actual result

An unknown-typed file with no name is listed in favorites:/// instead. Its thumbnail (if any) is identical to the moved file. Using "Open Item Location" will open the location the file was moved from in step 2.

See also #161.

Captura_de_ecrã_de_2017-12-14_13-57-36

Edited Dec 14, 2017 by António Fernandes
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
No due date
3
Labels
1. Bug 5. Starred files Deliverable
Assign labels
  • View project labels
Reference: GNOME/nautilus#162